# vitallens-core

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  build.rs  pyproject.toml  uniffi.toml
.github/workflows/: ci.yml  release.yml
android/: build.gradle.kts  settings.gradle.kts
bindings/headers/: VitalLensCoreFFI.h  module.modulemap
bindings/swift/: VitalLensCore.swift
docs/: ios.md  js.md  python.md
kotlin/: build.gradle.kts  settings.gradle.kts
kotlin/android/: build.gradle.kts
kotlin/jvm/: build.gradle.kts
scripts/: prepare_test_data.py
src/: lib.rs  mobile.rs  registry.rs  types.rs
src/bindings/: python.rs
src/geometry/: mod.rs  roi.rs
src/signal/: bp.rs  fft.rs  filters.rs  hrv.rs  mod.rs  peaks.rs  rate.rs  resp.rs  stubs.rs
src/state/: buffers.rs  frames.rs  mod.rs  series.rs  session.rs
tests/: hrv_tests.rs  peaks_tests.rs  rate_tests.rs  resp_tests.rs  session_tests.rs
tests/fixtures/: sample_video_1.json  sample_video_2.json  sample_video_3.json  sample_video_4.json  sample_video_5.json  sample_video_6.json  video1_4BPM_rotated.json
