[package]
name = "vitallens-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Core
rustfft = "6.2"
ndarray = "0.15"
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"

# Python (Optional - Disabled for Wasm)
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py37"], optional = true }
numpy = { version = "0.20", optional = true }

# Web
wasm-bindgen = "0.2"

# Mobile
uniffi = { version = "0.28", features = ["cli"] }

[build-dependencies]
uniffi_build = "0.28"

[features]
# Maturin will enable this automatically if we tell it to, 
# or we enable it by default but disable it for wasm.
default = [] 
python = ["dep:pyo3", "dep:numpy"]