[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["python"]

[project]
name = "vitallens_core"
dynamic = ["version"]
requires-python = ">=3.10"
readme = "README.md"
description = "Core signal processing library for VitalLens"
classifiers = [
    "Programming Language :: Rust",
]